--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
   <section id="pane_five">&nbsp;</section>
   <script src="jquery.min.js"></script>
   <script src="master.js"></script>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(100997787); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100997787ns.gif" /></p></noscript>  
 </body>
 </html>
