--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="description" content="Hi. You've reached Scribe Communications." />
   <link rel="stylesheet" href="reset.css" media="all" />
   <link rel="stylesheet" href="styles.css" media="all" />
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="cf">
   <section id="pane_one">
